xml/src1/objects/Courses__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on Courses</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <inlineHelpText>Enter any other relevant information for course</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this relationship is created for Roll up Credit Hours for each of teh course for the contacts</description>
        <label>Course Record</label>
        <referenceTo>Course_Record__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Course_ID__c</fullName>
        <description>Course ID in data center</description>
        <externalId>true</externalId>
        <inlineHelpText>Course ID in data center</inlineHelpText>
        <label>GBHEM DataCenter Course ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Course Name</description>
        <inlineHelpText>Course Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Select course status.  Inactive status is only for courses no longer offered.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>Advanced_Course_of_Study_Active</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Courses__c.Course_AdvCOS</value>
        </filters>
        <label>Advanced Course of Study (Active)</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Courses</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name__c</columns>
        <columns>Course_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Courses</label>
    </listViews>
    <listViews>
        <fullName>All_Courses</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Courses</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Courses</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name__c</columns>
        <columns>Course_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive Courses</label>
    </listViews>
    <listViews>
        <fullName>BGTS_Active</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Courses__c.BGTS</value>
        </filters>
        <label>BGTS (Active)</label>
    </listViews>
    <listViews>
        <fullName>Certification_in_Specialized_Ministry</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Courses__c.Course_Cert_in_Specialized_Ministry</value>
        </filters>
        <label>Certification in Specialized Ministry</label>
    </listViews>
    <listViews>
        <fullName>Course_of_Study_Active</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Courses__c.Course_COS</value>
        </filters>
        <label>Course of Study (Active)</label>
    </listViews>
    <listViews>
        <fullName>UM_Studies_Active</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Courses__c.Course_UM_Studies</value>
        </filters>
        <label>UM Studies (Active)</label>
    </listViews>
    <nameField>
        <displayFormat>Course-{00000000}</displayFormat>
        <label>Course ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <recordTypes>
        <fullName>BGTS</fullName>
        <active>true</active>
        <description>Basic Graduate Theological Study Courses</description>
        <label>BGTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course_AdvCOS</fullName>
        <active>true</active>
        <description>Courses that enable a local pastor to meet educational requirements</description>
        <label>Advanced Course of Study</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course_COS</fullName>
        <active>true</active>
        <description>Any of the courses in the basic course of study program</description>
        <label>Course of Study</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course_Cert_in_Specialized_Ministry</fullName>
        <active>true</active>
        <description>Courses for GBHEM Certification in a Specialized Ministry area</description>
        <label>Cert in Specialized Ministry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course_UM_Studies</fullName>
        <active>true</active>
        <description>Studies in United Methodist History, Doctrine, and Polity</description>
        <label>UM Studies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <description>Courses to fulfill the requirements for becoming aDdiaconal Minister</description>
        <label>Foundation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Foundation_Status_InActive</fullName>
        <active>true</active>
        <description>If the Record Type is &apos;Foundation&apos; ,Status should always be InActive</description>
        <errorConditionFormula>AND( $RecordType.DeveloperName = &apos;Foundation&apos;,  ISPICKVAL( Status__c ,&apos;Active&apos;) )</errorConditionFormula>
        <errorMessage>Foundation Courses must be listed as Inactive</errorMessage>
    </validationRules>
</CustomObject>